# CellTreeBench

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: supervised_split_example.ipynb
src/celltreebench.egg-info/: PKG-INFO
src/celltreebench/datasets/: celegans.py  celegans_dataset_base.py  celegans_dataset_supervised.py
src/celltreebench/utils/: ddml_loss_utils.py  distance_metrics.py  reconstruction_eval.py  tree_operations.py
